--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -15,6 +15,7 @@
             <script th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
             <!-- Include all compiled plugins (below), or include individual files as needed -->
             <script th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>
+            <script th:src="@{/js/devopsbuddy.js}"></script>
         </div>
     </body>
 </html>
